--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,12 @@ future==0.18.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+numpy==1.19.0
+pandas~=1.0.5
 plotly==4.9.0
+python-dateutil==2.8.1
+pytz==2020.1
 retrying==1.3.3
-six==1.15.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
 Werkzeug==1.0.1
 wincertstore==0.2
