--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 Brotli==1.0.7
+brotlipy==0.7.0
 certifi==2020.6.20
+cffi==1.14.0
 click==7.1.2
 dash==1.13.4
+dash-bootstrap-components==0.10.3
 dash-core-components==1.10.1
 dash-html-components==1.0.3
 dash-renderer==1.5.1
@@ -13,11 +16,16 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 numpy==1.19.0
-pandas~=1.0.5
+pandas==1.0.5
+pip==20.1.1
 plotly==4.9.0
+pycparser==2.20
 python-dateutil==2.8.1
 pytz==2020.1
+PyYAML==5.3.1
 retrying==1.3.3
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
+setuptools==49.2.0.post20200712
+six==1.15.0
 Werkzeug==1.0.1
+wheel==0.34.2
 wincertstore==0.2
