--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,41 @@
+attrs==19.3.0
 Brotli==1.0.7
 brotlipy==0.7.0
 certifi==2020.6.20
 cffi==1.14.0
 click==7.1.2
+click-plugins==1.1.1
+cligj==0.5.0
 dash==1.13.4
 dash-bootstrap-components==0.10.3
 dash-core-components==1.10.1
 dash-html-components==1.0.3
 dash-renderer==1.5.1
 dash-table==4.8.1
+Fiona==1.8.13
 Flask==1.1.2
 Flask-Compress==1.5.0
 future==0.18.2
+GDAL==3.0.4
+geojson-rewind==0.2.0
+geopandas==0.8.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+munch==2.5.0
 numpy==1.19.0
 pandas==1.0.5
 pip==20.1.1
 plotly==4.9.0
 pycparser==2.20
+pyproj==2.6.1.post1
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
 retrying==1.3.3
+Rtree==0.9.4
 setuptools==49.2.0.post20200712
+Shapely==1.7.0
 six==1.15.0
 Werkzeug==1.0.1
 wheel==0.34.2
