add last update notif

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ canada-geo.json
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
 
+.ipynb
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
