--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ future==0.18.2
 GDAL==3.0.4
 geojson-rewind==0.2.0
 geopandas==0.8.1
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
