--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
 retrying==1.3.3
-Rtree==0.9.4
+Rtree-linux==0.9.4
 setuptools==49.2.0.post20200712
 Shapely==1.7.0
 six==1.15.0
